# beta-reader

./: .gitignore  README.md  project-plan.md  pyproject.toml
config/: config.yaml  config.yaml.example  system_prompt.txt
examples/: sample.txt  sample_edited.txt
scripts/: extract_model_temps.py
src/beta_reader/cli/: main.py
src/beta_reader/core/: batch_state.py  chunk_processor.py  config.py  format_converter.py  model_comparison.py  model_recommendations.py  performance.py  text_chunker.py  utils.py
src/beta_reader/diff/: __init__.py  epub.py  text.py
src/beta_reader/llm/: __init__.py  client.py  exceptions.py
src/beta_reader/processors/: __init__.py  base.py  epub.py  text.py
tests/: __init__.py  conftest.py  test_batch_state.py  test_config.py  test_text_chunker.py
